# music-notas

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  index.md
docs/api/: escala.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escala.py  escalas.py
tests/: test_acorde.py  test_cli.py  test_escala.py
