[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["johonnes <wjohonnes@gmail.com>"]
readme = "README.md"
classifiers = [
    # Education
    "Topic :: Education",
    # CLI / Console
    "Environment :: Console",
    # Portuguese
    "Natural Language :: Portuguese (Brazilian)",
    # Stable
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Documentação" = ""
"Código" = "https://github.com/johonnes/notas-musicais"
"Bug Tracker" = "https://github.com/johonnes/notas-musicais/issues"

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
rich = "^13.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath= "."
addopts= "--doctest-modules"

[tool.isort]
profile= "black"
line_length = 79

[tool.taskipy.tasks]
lint ="blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test= "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"